Fix image overflow on dashboard

--- a/app/assets/stylesheets/users/dashboard.css.scss
+++ b/app/assets/stylesheets/users/dashboard.css.scss
@@ -91,6 +91,7 @@
         width: 90px;
         height: 45px;
         margin-right: 15px;
+        overflow: hidden;
       }
 
       .content {
